# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: cli.py  compare.py  engine.py  files.py  generate_diff.py
gendiff/output_formats/: __init__.py  jsonlike.py  plate.py
gendiff/scripts/: gendiff.py
