[tool.poetry]
name = "IlyaSavitckiy_diff_calculator"
version = "0.1.0"
description = ""
authors = ["Ilya Savitskiy <hex.ilyasavitskiy@gmail.com>"]
packages = [
    { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
